--- a/.gitattributes
+++ b/.gitattributes
@@ -32,10 +32,10 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
-# BitBake source file
-*.bb linguist-detectable=true
-*.bb linguist-documentation=false
-*.bb linguist-language=BitBake
+# PostScript source file
+*.ps linguist-detectable=true
+*.ps linguist-documentation=false
+*.ps linguist-language=PostScript
 # JSON (JavaScript Object Notation) source file
 *.json linguist-detectable=false
 *.json linguist-documentation=false
@@ -173,7 +173,7 @@
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 2 (2022, Tuesday, August 30th at 2:34 pm PST)
+# File type: gitattributes file (*.gitattributes)
+# File version: 3 (2022, Thursday, November 3rd at 4:33 pm PST)
 # Line count (including blank lines and compiler line): 180
 # End of script
